--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,19 @@ body {
 
 .App-header {
   align-items: center;
-  background-color: #282c34;
+  background-image: url('./question-mark-g680d12197_1920.jpg');
+  background-size: cover;
   color: white;
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
   justify-content: center;
+  min-height: 100vh;
+}
+
+.App-gamer {
+  background-image: url('./question-mark-g680d12197_1920.jpg');
+  background-size: cover;
   min-height: 100vh;
 }
 
